src/styles/globals.css
@import "@fontsource/esteban";
@import "@fontsource/ia-writer-quattro";
@import "./out.css";

:root {
  color-scheme: dark;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: system-ui, sans-serif;
}

article h1,
article h2,
article h3,
article h4,
article h5,
article h6,
.ff-e {
  font-family: "Esteban", serif;
}

body {
  font-family: "iA Writer Quattro", sans-serif;
}

/* reset font for component previews */
[data-preview],
[data-preview] *,
[class*="-popup"],
[class*="-popup"] *,
[class*="-backdrop"],
[class*="-backdrop"] *,
[role="dialog"],
[role="dialog"] *,
[role="alertdialog"],
[role="alertdialog"] *,
[role="listbox"],
[role="listbox"] *,
[role="menu"],
[role="menu"] *,
[role="menubar"],
[role="menubar"] *,
[role="navigation"],
[role="navigation"] * {
  color-scheme: light;
  font-family:
    system-ui,
    -apple-system,
    Segoe UI,
    Roboto,
    Helvetica,
    Arial,
    sans-serif;
}

